--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
           eval "$(ssh-agent -s)"
           
           # Add the decoded PEM file directly from the secret to the SSH agent
-          echo "${{ secrets.PEMFILE }}" | ssh-add - <<< ""
+          echo "${{ secrets.PEM_FILE }}" | base64 --decode | ssh-add -
 
       - name: Set up SSH config
         run: |
